--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@types/node": "^13.1.8",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "markdown-it": "^10.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "stylus": "^0.54.7",
     "typescript": "^3.7.5"
   },
   "eslintConfig": {
