--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@types/node": "^13.1.8",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
+    "axios": "^0.19.2",
     "markdown-it": "^10.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "sass": "^1.25.0",
+    "sass-loader": "^8.0.2",
     "stylus": "^0.54.7",
     "typescript": "^3.7.5"
   },
