--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/draft-js": "^0.10.40",
     "@types/jest": "^24.9.0",
     "@types/node": "^13.1.8",
     "@types/react": "^16.9.19",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
+    "draft-js": "^0.11.5",
+    "es6-shim": "^0.35.5",
     "markdown-it": "^10.0.0",
+    "rc-dialog": "~7.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
