--- a/package.json
+++ b/package.json
@@ -64,7 +64,11 @@
     "react-app-polyfill": "^1.0.5",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-devtools": "^3.5.0",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.12.2",
     "resolve-url-loader": "3.1.1",
     "sass": "^1.25.0",
